<resources>
    <string name="app_name">Whac-A-Mole</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="menu">Menu</string>
    <string name="game">Game</string>
    <string name="record">Record</string>
    <string name="score">Score</string>
    <string name="again">Again</string>
    <string name="result">Result</string>
    <string name="rules">Rules of the game: there are 9 holes on the playing field. Once every 0.5 seconds, a mole appears in one random hole. If you manage to get on it, then you will earn 1 point. The game goes on for 30 seconds. Good luck!</string>
    <string name="time_label">Time:</string>
    <string name="new_record">Congratulations, you have a new record!</string>
    <string name="nullable_record">Clear record</string>
    <string name="record_is_null">Record is cleared</string>
</resources>